# video-hosting

./: CMakeLists.txt  README.md
src/: main.cpp
src/film/: Film.cpp  Film.h
src/models/film/: Film.cpp  Film.h
src/models/user/: User.cpp  User.h
src/repositories/films-repository/: FilmsRepository.cpp  FilmsRepository.h
src/repositories/films-repository/films-line-parser/: FilmsLineParser.cpp  FilmsLineParser.h
src/repositories/users-repository/: UsersRepository.cpp  UsersRepository.h
src/repositories/users-repository/users-line-parser/: UsersLineParser.cpp  UsersLineParser.h
src/services/authentication-service/: AuthenticationService.cpp  AuthenticationService.h
src/services/file-service/: FileService.cpp  FileService.h
src/services/utils/: Utils.cpp  Utils.h
src/user/: User.h
tests/file-service-tests/: FileServiceTests.cpp
tests/films-line-parser-tests/: FilmsLineParserTests.cpp
tests/films-repository-tests/: FilmsRepositoryTests.cpp
tests/users-line-parser-tests/: UsersLineParserTests.cpp
tests/users-repository-tests/: UsersRepositoryTests.cpp
tests/utils-tests/: UtilsTests.cpp
